fixing more layout issues - resizing vertically, font sizes when resizing etc.

--- a/frontend/walkie-talkie/src/app/globals.css
+++ b/frontend/walkie-talkie/src/app/globals.css
@@ -28,4 +28,17 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+input, textarea {
+  user-select: text;
+  -webkit-user-select: text;
+}
+
+img {
+  -webkit-user-drag: none;
+  user-select: none;
+  pointer-events: auto;
 }
